@@ -30,48 +30,6 @@ along with this software (see the LICENSE.md file). If not, see
         <field name="defaultTimeZone" type="text-medium"/>
         <field name="defaultCountryGeoId" type="id"/>
     </entity>
-    <entity entity-name="TenantCurrency" package-name="moqui.tenant" group-name="tenantcommon">
-        <description>Each record represents a Currency UOM to be available to the tenant.
-            If no records are present all system currencies will be available.</description>
-        <field name="tenantId" type="id" is-pk="true"/>
-        <field name="currencyUomId" type="id" is-pk="true"/>
-        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
-    </entity>
-    <!-- on reconsideration, this probably won't be useful:
-    <entity entity-name="TenantEmail" package-name="moqui.tenant" group-name="tenantcommon">
-        <field name="tenantId" type="id" is-pk="true"/>
-        <field name="emailTypeEnumId" type="id" is-pk="true"/>
-        <field name="fromDate" type="date-time" is-pk="true"/>
-        <field name="thruDate" type="date-time"/>
-        <field name="emailTemplateId" type="id"/>
-        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
-        <relationship type="one-nofk" title="EmailType" related-entity-name="moqui.basic.Enumeration">
-            <key-map field-name="emailTypeEnumId"/>
-        </relationship>
-        <relationship type="one-nofk" related-entity-name="moqui.basic.email.EmailTemplate"/>
-    </entity>
-    -->
-    <entity entity-name="TenantLocale" package-name="moqui.tenant" group-name="tenantcommon">
-        <description>Each record represents a Locale to be available to the tenant.
-            If no records are present all system locales will be available.</description>
-        <field name="tenantId" type="id" is-pk="true"/>
-        <field name="locale" type="id" is-pk="true"/>
-        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
-    </entity>
-    <entity entity-name="TenantTimeZone" package-name="moqui.tenant" group-name="tenantcommon">
-        <description>Each record represents a Time Zone to be available to the tenant.
-            If no records are present all system time zones will be available.</description>
-        <field name="tenantId" type="id" is-pk="true"/>
-        <field name="timeZone" type="id" is-pk="true"/>
-        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
-    </entity>
-    <entity entity-name="TenantCountry" package-name="moqui.tenant" group-name="tenantcommon">
-        <description>Each record represents a Country (Geo) to be available to the tenant.
-            If no records are present all system countries will be available.</description>
-        <field name="tenantId" type="id" is-pk="true"/>
-        <field name="countryGeoId" type="id" is-pk="true"/>
-        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
-    </entity>
     <entity entity-name="TenantDataSource" package-name="moqui.tenant" group-name="tenantcommon">
         <description>
             There should be one record for each tenant and each group-map for the active EntityProxy.
@@ -106,4 +64,47 @@ along with this software (see the LICENSE.md file). If not, see
             <key-map field-name="tenantId"/></member-entity>
         <alias-all entity-alias="TNT"/><alias-all entity-alias="THD"/>
     </view-entity>
+
+    <!-- on reconsideration, these are not useful, better to keep business level stuff out of these technical level conf entities:
+    <entity entity-name="TenantCurrency" package-name="moqui.tenant" group-name="tenantcommon">
+        <description>Each record represents a Currency UOM to be available to the tenant.
+            If no records are present all system currencies will be available.</description>
+        <field name="tenantId" type="id" is-pk="true"/>
+        <field name="currencyUomId" type="id" is-pk="true"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+    </entity>
+    <entity entity-name="TenantEmail" package-name="moqui.tenant" group-name="tenantcommon">
+        <field name="tenantId" type="id" is-pk="true"/>
+        <field name="emailTypeEnumId" type="id" is-pk="true"/>
+        <field name="fromDate" type="date-time" is-pk="true"/>
+        <field name="thruDate" type="date-time"/>
+        <field name="emailTemplateId" type="id"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+        <relationship type="one-nofk" title="EmailType" related-entity-name="moqui.basic.Enumeration">
+            <key-map field-name="emailTypeEnumId"/>
+        </relationship>
+        <relationship type="one-nofk" related-entity-name="moqui.basic.email.EmailTemplate"/>
+    </entity>
+    <entity entity-name="TenantLocale" package-name="moqui.tenant" group-name="tenantcommon">
+        <description>Each record represents a Locale to be available to the tenant.
+            If no records are present all system locales will be available.</description>
+        <field name="tenantId" type="id" is-pk="true"/>
+        <field name="locale" type="id" is-pk="true"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+    </entity>
+    <entity entity-name="TenantTimeZone" package-name="moqui.tenant" group-name="tenantcommon">
+        <description>Each record represents a Time Zone to be available to the tenant.
+            If no records are present all system time zones will be available.</description>
+        <field name="tenantId" type="id" is-pk="true"/>
+        <field name="timeZone" type="id" is-pk="true"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+    </entity>
+    <entity entity-name="TenantCountry" package-name="moqui.tenant" group-name="tenantcommon">
+        <description>Each record represents a Country (Geo) to be available to the tenant.
+            If no records are present all system countries will be available.</description>
+        <field name="tenantId" type="id" is-pk="true"/>
+        <field name="countryGeoId" type="id" is-pk="true"/>
+        <relationship type="one" related-entity-name="moqui.tenant.Tenant"/>
+    </entity>
+    -->
 </entities>
